[package]
name = "rabc-clib"
description = "Demo C binding of linux system programming"
version = "0.1.0"
authors = ["Gris Ge <fge@redhat.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "rabc"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
once_cell = "1.12.0"
serde = "1.0.138"
serde_json = "1.0.82"
rabc = { version = "0.1", path = "../lib" }
