[package]
name = "rabc"
version = "0.1.0"
authors = ["Gris Ge <fge@redhat.com>"]
description = "Demo Library for linux system"
license = "Apache-2.0"
homepage = "https://example.com"
documentation = "https://example.com"
repository = "https://github.com/cathay4t/librabc"
keywords = ["linux"]
categories = ["os::linux-apis"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
log = "0.4.17"
tokio = { version = "1.19.2", features = ["net"] }

[dependencies.nix]
version = "0.24.1"
default-features = false
features = ["time", "event"]
